--- a/apps/retro_hex_chat_web/assets/css/dialogs/help.css
+++ b/apps/retro_hex_chat_web/assets/css/dialogs/help.css
@@ -185,8 +185,8 @@
 }
 
 .help-icon-24 {
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
 }
 
 /* Content header with icon */
